Frontend: Add myCharts favicon in all pages

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "frontend.js",
   "scripts": {
-    "start": "node",
-    "dev": "nodemon"
+    "start": "node frontend.js",
+    "dev": "nodemon frontend.js"
   },
   "keywords": [],
   "author": "",
