--- a/create-chart-line/package.json
+++ b/create-chart-line/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "parcel src/index.html",
     "chart": "node src/chart.js",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "serve": "nodemon src/create-chart-ms.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,9 @@
   "dependencies": {
     "chart.js": "^4.3.0",
     "csv": "^6.3.0",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
     "parcel": "^2.8.3"
   }
 }
