Got to the point where create-chart-service saves a .pdf file

--- a/create-chart-line/Dockerfile
+++ b/create-chart-line/Dockerfile
@@ -1,9 +1,10 @@
 # syntax=docker/dockerfile:1
 
-FROM node:18-alpine
+FROM node:20-bullseye
 ENV NODE_ENV=development
 WORKDIR /app
 COPY ["package.json", "package-lock.json*", "./"]
-RUN npm install --omit-dev
+RUN npm install
 COPY . .
+RUN npm rebuild canvas --update-binary
 CMD ["npm", "run", "dev"]
