--- a/create-chart-line/package.json
+++ b/create-chart-line/package.json
@@ -4,7 +4,7 @@
   "description": "(description)",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
+    "dev": "nodemon src/index.js",
     "chart": "node src/chart.js",
     "build": "parcel build src/index.html",
     "serve": "nodemon src/create-chart-ms.js"
@@ -13,9 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chart.js": "^4.3.0",
+    "chartjs-node-canvas": "^4.1.6",
     "csv": "^6.3.0",
     "express": "^4.18.2",
+    "kafkajs": "^2.2.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "parcel": "^2.8.3"
