--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,15 @@ services:
       KAFKA_CLIENT_ID: service-frontend-adapter
       KAFKA_GROUP_ID: service-frontend-adapter
       KAFKA_TOPIC_BUY_CREDITS_REQUEST: buy-credits-request
+      KAFKA_TOPIC_CREATE_USER_REQUEST: create-user-request
       KAFKA_TOPIC_GET_USER_REPLY: get-user-reply
       KAFKA_TOPIC_GET_USER_REQUEST: get-user-request
+      KAFKA_TOPIC_CREATE_LINE_CHART_REQUEST: create-line-chart-request
+      KAFKA_TOPIC_CREATE_MULTI_AXIS_LINE_CHART_REQUEST: create-multi-axis-line-chart-request
+      KAFKA_TOPIC_CREATE_RADAR_CHART_REQUEST: create-radar-chart-request
+      KAFKA_TOPIC_CREATE_SCATTER_CHART_REQUEST: create-scatter-chart-request
+      KAFKA_TOPIC_CREATE_BUBBLE_CHART_REQUEST: create-bubble-chart-request
+      KAFKA_TOPIC_CREATE_POLAR_AREA_CHART_REQUEST: create-polar-area-chart-request
       PORT: 4008
     ports:
       - 4008:4008
@@ -42,6 +49,7 @@ services:
       KAFKA_TOPIC_BUY_CREDITS_REQUEST: buy-credits-request
       KAFKA_TOPIC_GET_USER_REPLY: get-user-reply
       KAFKA_TOPIC_GET_USER_REQUEST: get-user-request
+      KAFKA_TOPIC_CREATE_USER_REQUEST: create-user-request
       MONGO_URI: mongodb://root:example@service-user-data-mongo:27017/Users?authSource=admin
 
   service-user-data-mongo:
@@ -80,42 +88,69 @@ services:
       KAFKA_BROKER: kafka:9092
       KAFKA_CLIENT_ID: service-chart-create-line
       KAFKA_GROUP_ID: service-chart-create-line
-  # service-chart-create-bubble:
-  #   build: ./service-chart-create-bubble
-  #   volumes:
-  #     - ./service-chart-create-bubble:/app
-  #   environment:
-  #     KAFKA_BROKER: kafka:9092
+      KAFKA_TOPIC_CREATE_CHART_REQUEST: create-line-chart-request
+      KAFKA_TOPIC_CREATE_CHART_RESPONSE: create-line-chart-response
+      CHART_TYPE: line
 
+  service-chart-create-bubble:
+    build: ./service-chart-create-bubble
+    volumes:
+      - ./service-chart-create-bubble:/app
+    environment:
+      KAFKA_BROKER: kafka:9092
+      KAFKA_CLIENT_ID: service-chart-create-bubble
+      KAFKA_GROUP_ID: service-chart-create-bubble
+      KAFKA_TOPIC_CREATE_CHART_REQUEST: create-bubble-chart-request
+      KAFKA_TOPIC_CREATE_CHART_RESPONSE: create-bubble-chart-response
+      CHART_TYPE: bubble
 
-  # service-chart-create-multi-axis-line:
-  #   build: ./service-chart-create-multi-axis-line
-  #   volumes:
-  #     - ./service-chart-create-multi-axis-line:/app
-  #   environment:
-  #     KAFKA_BROKER: kafka:9092
+  service-chart-create-multi-axis-line:
+    build: ./service-chart-create-multi-axis-line
+    volumes:
+      - ./service-chart-create-multi-axis-line:/app
+    environment:
+      KAFKA_BROKER: kafka:9092
+      KAFKA_CLIENT_ID: service-chart-create-multi-axis-line
+      KAFKA_GROUP_ID: service-chart-create-multi-axis-line
+      KAFKA_TOPIC_CREATE_CHART_REQUEST: create-multi-axis-line-chart-request
+      KAFKA_TOPIC_CREATE_CHART_RESPONSE: create-multi-axis-line-chart-response
+      CHART_TYPE: multi-axis-line
 
-  # service-chart-create-polar-area:
-  #   build: ./service-chart-create-polar-area
-  #   volumes:
-  #     - ./service-chart-create-polar-area:/app
-  #   environment:
-  #     KAFKA_BROKER: kafka:9092
+  service-chart-create-polar-area:
+    build: ./service-chart-create-polar-area
+    volumes:
+      - ./service-chart-create-polar-area:/app
+    environment:
+      KAFKA_BROKER: kafka:9092
+      KAFKA_CLIENT_ID: service-chart-create-polar-area
+      KAFKA_GROUP_ID: service-chart-create-polar-area
+      KAFKA_TOPIC_CREATE_CHART_REQUEST: create-polar-area-chart-request
+      KAFKA_TOPIC_CREATE_CHART_RESPONSE: create-polar-area-chart-response
+      CHART_TYPE: polar-area
 
-  # service-chart-create-radar:
-  #   build: ./service-chart-create-radar
-  #   volumes:
-  #     - ./service-chart-create-radar:/app
-  #   environment:
-  #     KAFKA_BROKER: kafka:9092
+  service-chart-create-radar:
+    build: ./service-chart-create-radar
+    volumes:
+      - ./service-chart-create-radar:/app
+    environment:
+      KAFKA_BROKER: kafka:9092
+      KAFKA_CLIENT_ID: service-chart-create-radar
+      KAFKA_GROUP_ID: service-chart-create-radar
+      KAFKA_TOPIC_CREATE_CHART_REQUEST: create-radar-chart-request
+      KAFKA_TOPIC_CREATE_CHART_RESPONSE: create-radar-chart-response
+      CHART_TYPE: radar
 
-  # service-chart-create-scatter:
-  #   build: ./service-chart-create-scatter
-  #   volumes:
-  #     - ./service-chart-create-scatter:/app
-  #   environment:
-  #     KAFKA_BROKER: kafka:9092
-
+  service-chart-create-scatter:
+    build: ./service-chart-create-scatter
+    volumes:
+      - ./service-chart-create-scatter:/app
+    environment:
+      KAFKA_BROKER: kafka:9092
+      KAFKA_CLIENT_ID: service-chart-create-scatter
+      KAFKA_GROUP_ID: service-chart-create-scatter
+      KAFKA_TOPIC_CREATE_CHART_REQUEST: create-scatter-chart-request
+      KAFKA_TOPIC_CREATE_CHART_RESPONSE: create-scatter-chart-response
+      CHART_TYPE: scatter
   # service-chart-store-bubble:
   #   build: ./service-chart-store-bubble
   #   volumes:
