--- a/service-chart-create-radar/package.json
+++ b/service-chart-create-radar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-line-chart",
+  "name": "create-radar-chart",
   "version": "1.0.0",
   "description": "(description)",
   "main": "index.js",
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chart.js": "^4.3.0",
+    "chartjs-node-canvas": "^4.1.6",
     "csv": "^6.3.0",
+    "express": "^4.18.2",
+    "kafkajs": "^2.2.4",
+    "multer": "^1.4.5-lts.1",
     "parcel": "^2.8.3"
   },
   "devDependencies": {
