Update service-chart-create-* names in package.json

--- a/service-chart-create-bubble/package.json
+++ b/service-chart-create-bubble/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-bubble-chart",
+  "name": "chart-create-bubble",
   "version": "1.0.0",
   "description": "(description)",
   "main": "index.js",
