--- a/service-chart-create-polar-area/package.json
+++ b/service-chart-create-polar-area/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-polar-area-chart",
+  "name": "chart-create-polar-area",
   "version": "1.0.0",
   "description": "(description)",
   "main": "index.js",
