--- a/service-chart-create-scatter/package.json
+++ b/service-chart-create-scatter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-scatter-chart",
+  "name": "chart-create-scatter",
   "version": "1.0.0",
   "description": "(description)",
   "main": "index.js",
