--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+# TODO Check unused env vars in the end
+
 services:
   frontend:
     build: ./frontend
@@ -9,12 +11,20 @@ services:
       GOOGLE_CLIENT_ID: 585292133303-3ptuj94223ef78ir7u5d3ce9hcn0vfnm.apps.googleusercontent.com
       GOOGLE_CLIENT_SECRET: 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
       NEXT_PUBLIC_MYCHARTS_PRIMARY_COLOR: "#390050"
-      NEXT_PUBLIC_URL_FRONTEND_ADAPTER: http://localhost:4008
+      NEXT_PUBLIC_URL_CHART_CREATE: http://localhost:4008/createChart
+      NEXT_PUBLIC_URL_CHARTLIST_GET: http://localhost:4008/getChartList
+      NEXT_PUBLIC_URL_CREDITS_UPDATE: http://localhost:4008/updateCredits
+      NEXT_PUBLIC_URL_LAST_LOGIN_UPDATE: http://localhost:4008/updateLastLogin
+      NEXT_PUBLIC_URL_NUMCHARTS_INCREMENT: http://localhost:4008/numChartsIncrement
+      NEXT_PUBLIC_URL_USER_CREATE: http://localhost:4008/createUser
+      NEXT_PUBLIC_URL_USER_GET: http://localhost:4008/getUser
+      NEXT_PUBLIC_URL_CHART_DOWNLOAD: http://localhost:4008/downloadChart
       NEXTAUTH_SECRET: td7o5GEO+wnpLfHNTiDbt6kJiqxlHfZhEtyDPPSD8JY=
       NEXTAUTH_URL: http://localhost:4007
       PORT: 4007
 
   # TODO Break adapter into multiple pieces (even by chart type, or by function (e.g. buy credits, get chart etc.))
+  # TODO Change env vars so any change that needs to be made has to be made only on one place
   service-frontend-adapter:
     build: ./service-frontend-adapter
     volumes:
@@ -35,12 +45,22 @@ services:
       KAFKA_TOPIC_CHART_GET_POLAR_AREA_REQUEST: chart-get-polar-area-request
       KAFKA_TOPIC_CHART_GET_RADAR_REQUEST: chart-get-radar-request
       KAFKA_TOPIC_CHART_GET_SCATTER_REQUEST: chart-get-scatter-request
-      KAFKA_TOPIC_CREDITS_BUY_REQUEST: credits-buy-request
+      KAFKA_TOPIC_CREDITS_UPDATE_REQUEST: credits-update-request
       KAFKA_TOPIC_LAST_LOGIN_UPDATE_REQUEST: last-login-update-request
+      KAFKA_TOPIC_NUMCHARTS_INCREMENT_REQUEST: numCharts-increment-request
       KAFKA_TOPIC_USER_CREATE_REQUEST: user-create-request
       KAFKA_TOPIC_USER_GET_REPLY: user-get-reply
       KAFKA_TOPIC_USER_GET_REQUEST: user-get-request
+      URL_CHART_DOWNLOAD: downloadChart
       PORT: 4008
+      URL_CHART_CREATE: createChart
+      URL_CHARTLIST_GET: getChartList
+      URL_CREDITS_UPDATE: updateCredits
+      URL_LAST_LOGIN_UPDATE: updateLastLogin
+      URL_NUMCHARTS_INCREMENT: numChartsIncrement
+      URL_USER_CREATE: createUser
+      URL_USER_GET: getUser
+
     ports:
       - 4008:4008
 
@@ -49,23 +69,22 @@ services:
     volumes:
       - ./service-user-data:/app
     environment:
-      # TODO Change authSource=admin, root/example
       KAFKA_BROKER: kafka:9092
       KAFKA_CLIENT_ID: service-user-data
       KAFKA_GROUP_ID: service-user-data
-      KAFKA_TOPIC_CREDITS_BUY_REQUEST: credits-buy-request
+      KAFKA_TOPIC_CREDITS_UPDATE_REQUEST: credits-update-request
+      KAFKA_TOPIC_LAST_LOGIN_UPDATE_REQUEST: last-login-update-request
+      KAFKA_TOPIC_NUMCHARTS_INCREMENT_REQUEST: numCharts-increment-request
+      KAFKA_TOPIC_USER_CREATE_REQUEST: user-create-request
       KAFKA_TOPIC_USER_GET_REPLY: user-get-reply
       KAFKA_TOPIC_USER_GET_REQUEST: user-get-request
-      KAFKA_TOPIC_USER_CREATE_REQUEST: user-create-request
-      KAFKA_TOPIC_LAST_LOGIN_UPDATE_REQUEST: last-login-update-request
-      MONGO_URI: mongodb://root:example@service-user-data-mongo:27017/Users?authSource=admin
+      MONGO_URI: mongodb://myUsername:myPassword@service-user-data-mongo:27017/Users?authSource=admin
 
   service-user-data-mongo:
     image: mongo:6-jammy
     environment:
-      # TODO Change these
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_USERNAME: myUsername
+      MONGO_INITDB_ROOT_PASSWORD: myPassword
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.0
@@ -98,6 +117,8 @@ services:
       KAFKA_GROUP_ID: service-chart-create-bubble
       KAFKA_TOPIC_CHART_SAVE_REQUEST: chart-save-bubble-request
       KAFKA_TOPIC_CHART_CREATE_REQUEST: chart-create-bubble-request
+      CHART_WIDTH: 400
+      CHART_HEIGHT: 400
 
   service-chart-create-line:
     build: ./service-chart-create-line
@@ -109,6 +130,8 @@ services:
       KAFKA_GROUP_ID: service-chart-create-line
       KAFKA_TOPIC_CHART_CREATE_REQUEST: chart-create-line-request
       KAFKA_TOPIC_CHART_SAVE_REQUEST: chart-save-line-request
+      CHART_WIDTH: 400
+      CHART_HEIGHT: 400
 
   service-chart-create-multi-axis-line:
     build: ./service-chart-create-multi-axis-line
@@ -120,6 +143,8 @@ services:
       KAFKA_GROUP_ID: service-chart-create-multi-axis-line
       KAFKA_TOPIC_CHART_SAVE_REQUEST: chart-save-multi-axis-line-request
       KAFKA_TOPIC_CHART_CREATE_REQUEST: chart-create-multi-axis-line-request
+      CHART_WIDTH: 400
+      CHART_HEIGHT: 400
 
   service-chart-create-polar-area:
     build: ./service-chart-create-polar-area
@@ -131,6 +156,8 @@ services:
       KAFKA_GROUP_ID: service-chart-create-polar-area
       KAFKA_TOPIC_CHART_CREATE_REQUEST: chart-create-polar-area-request
       KAFKA_TOPIC_CHART_SAVE_REQUEST: chart-save-polar-area-request
+      CHART_WIDTH: 400
+      CHART_HEIGHT: 400
 
   service-chart-create-radar:
     build: ./service-chart-create-radar
@@ -142,6 +169,8 @@ services:
       KAFKA_GROUP_ID: service-chart-create-radar
       KAFKA_TOPIC_CHART_CREATE_REQUEST: chart-create-radar-request
       KAFKA_TOPIC_CHART_SAVE_REQUEST: chart-save-radar-request
+      CHART_WIDTH: 400
+      CHART_HEIGHT: 400
 
   service-chart-create-scatter:
     build: ./service-chart-create-scatter
@@ -153,6 +182,8 @@ services:
       KAFKA_GROUP_ID: service-chart-create-scatter
       KAFKA_TOPIC_CHART_CREATE_REQUEST: chart-create-scatter-request
       KAFKA_TOPIC_CHART_SAVE_REQUEST: chart-save-scatter-request
+      CHART_WIDTH: 400
+      CHART_HEIGHT: 400
 
   service-chart-store-bubble:
     build: ./service-chart-store-bubble
@@ -231,10 +262,3 @@ services:
       KAFKA_TOPIC_CHART_SAVE_REQUEST: chart-save-scatter-request
       KAFKA_TOPIC_GET_CHART_REQUEST: chart-get-scatter-request
       KAFKA_TOPIC_GET_CHART_RESPONSE: chart-get-scatter-response
-
-  service-chart-template-download:
-    build: ./service-chart-template-download
-    volumes:
-      - ./service-chart-template-download:/app
-    environment:
-      KAFKA_BROKER: kafka:9092
